@@ -419,6 +419,14 @@ programmer
   vfyled = ~ 13;
 ;
 
+#The FT4232H can be treated as FT2232H, but it has a different USB
+#device ID of 0x6011.
+programmer parent "avrftdi"
+  id         = "4232h";
+	desc       = "FT4232H based generic programmer";
+	usbpid     = 0x6011;
+;
+
 programmer
   id         = "jtagkey";
   desc       = "Amontec JTAGKey, JTAGKey-Tiny and JTAGKey2";
